Add PDFObject library and update manifest to include it
- Added pdfobject.min.js to the project to enable PDF embedding functionality.
- Updated manifest.json to include pdfobject.min.js in the resources list.

--- a/manifest.json
+++ b/manifest.json
@@ -33,7 +33,8 @@
     {
       "resources": [
         "lib/jspdf.umd.min.js",
-        "lib/html2canvas.min.js"
+        "lib/html2canvas.min.js",
+        "lib/pdfobject.min.js"
       ],
       "matches": [
         "<all_urls>"
